# gatidb

./: .clang-format  .clangd  .gitignore  .prettierignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  Makefile  README.md  WAL_PLAN.md
.cache/clangd/index/: btree.cpp.9E83BCEB2E61B615.idx  btree.hpp.23D3D9B479A00F65.idx  btree_tests.cpp.D029AB59F26F4E43.idx
benches/: btree_bench.rs
include/gatidb/: btree.hpp  gatidb.h  gatidb.hpp
src/: btree.cpp  btree.rs  buffer.rs  catalog.rs  disk.rs  disk_btree.rs  gatidb.cpp  lib.rs  main.cpp  main.rs  page.rs  table.rs  wal.rs
tests/: btree_tests.cpp  test_gatidb.cpp
